Modifications sur l'appli avec ajout partiel des parametres et notif
